@@ -1499,4 +1499,22 @@ or download the
     </content>
   </item>
 
+  <item>
+    <date>2004-12-27 20:20</date>
+    <title>GStreamer FFmpeg 0.8.3 "Tiny Piece of Plastic" released</title>
+    <content>
+<p>
+The GStreamer team is proud to announce a new stable release of the
+GStreamer 0.8.x series.
+</p>
+<p>
+Check out
+<a href="&site;/releases/gst-ffmpeg/0.8.3.html">release notes</a>
+or download the
+<a href="&site;/src/gst-ffmpeg/gst-ffmpeg-0.8.3.tar.gz">tar.gz</a> or
+<a href="&site;/src/gst-ffmpeg/gst-ffmpeg-0.8.3.tar.bz2">tar.bz2</a> archive.
+</p>
+    </content>
+  </item>
+
 </news>
