@@ -1,0 +1,100 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-ffmpeg</module>
+  <module-fancy>GStreamer FFmpeg</module-fancy>
+  <name>Tiny Piece of Plastic</name>
+  <version>0.8.3</version>
+
+  <intro>
+<p>
+The GStreamer team is happy to announce a new stable release of the
+FFmpeg-based GStreamer plugin.
+</p>
+<p>
+This module is separated from GStreamer Plugins for easier maintenance
+and decoupled release cycles.
+Our CVS contains both the patched source code to FFmpeg, as well as the
+set of patches against upstream CVS, so we can send patches upstream
+regularly from our modifications.
+</p>
+  </intro>
+  <features>
+    <feature>codecs for most popular formats</feature>
+    <feature>optimized colorspace conversion</feature>
+    <feature>stability and synchronization fixes</feature>
+  </features>
+  <contributors>
+    <person>Ronald Bultje</person>
+    <person>Thomas Vander Stichele</person>
+    <person>David Schleef</person>
+    <person>Sebastien Cote</person>
+    <person>Wim Taymans</person>
+  </contributors>
+  <bugs>
+    <bug>
+      <id>137552</id>
+      <summary>[ffenc_h263p] segfaults</summary>
+    </bug>
+    <bug>
+      <id>138672</id>
+      <summary>[ffdec_msvc] Horseb~1.avi</summary>
+    </bug>
+    <bug>
+      <id>140137</id>
+      <summary>[ffdec_msmpeg4] Can't play pokem.avi</summary>
+    </bug>
+    <bug>
+      <id>148479</id>
+      <summary>[ffenc_mpeg4] broken</summary>
+    </bug>
+    <bug>
+      <id>150495</id>
+      <summary>[build] gst-ffmpeg build failure on Solaris</summary>
+    </bug>
+    <bug>
+      <id>152693</id>
+      <summary>[PATCH] [build] Compile errors with gcc 2.95</summary>
+    </bug>
+    <bug>
+      <id>155212</id>
+      <summary>crash in gstffmpegdec</summary>
+    </bug>
+    <bug>
+      <id>155274</id>
+      <summary>[ffdec_mp3] ID3 handling by gst-ffmpeg</summary>
+    </bug>
+    <bug>
+      <id>155363</id>
+      <summary>[build] gst-ffmpeg fails to build RPMS from CVS</summary>
+    </bug>
+    <bug>
+      <id>156920</id>
+      <summary>[PATCH][ffmpegdemux] close before forwarding event...</summary>
+    </bug>
+    <bug>
+      <id>157702</id>
+      <summary>[mpeg] file that ffmpeg fails to play correctly</summary>
+    </bug>
+    <bug>
+      <id>159319</id>
+      <summary>castaway.mov looks bad</summary>
+    </bug>
+    <bug>
+      <id>159755</id>
+      <summary>[PATCH] use ffmpeg pixel-aspect-ratio if available</summary>
+    </bug>
+    <bug>
+      <id>160318</id>
+      <summary>[ff[dec|enc]_mjpeg] should support image/jpeg</summary>
+    </bug>
+    <bug>
+      <id>161395</id>
+      <summary>Quicktime Video Causing segfault </summary>
+    </bug>
+    <bug>
+      <id>162215</id>
+      <summary>resetting rank for mp3demux</summary>
+    </bug>
+  </bugs>
+</release>
