@@ -1,4 +1,5 @@
 built_pages = \
+	0.8.3.html 0.8.3 \
 	0.8.2.html 0.8.2 \
 	0.8.1.html 0.8.1 \
 	0.8.0.html 0.8.0 \
