@@ -1,3 +1,10 @@
+2004-12-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/htdocs/news/news.xml:
+	* src/htdocs/releases/gst-ffmpeg/0.8.3.xml:
+	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
+	  Release notes for GStreamer FFmpeg 0.8.3 "Tiny Piece of Plastic".
+
 2004-12-23  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/bugs/bugs.xml:
